--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h6>言葉のたからばこ</h6>
+    <h6>言葉のたからばこ 2年生</h6>
    <div id="btn">スタート</div>
 
     <script src="main.js"></script>
